# TP7-CMake

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/app/: main.c
src/include/: calculatrice.h
src/includes/: calculatrice.c
src/lib/calculatriceDyn/: calculatriceDyn.c  calculatriceDyn.h  libcalculatriceDyn.so.1
src/lib/calculatriceStat/: calculatriceStat.c  calculatriceStat.h
